# gazebo_ackmann_rc_sim

./: .gitignore  Dockerfile  README.md  entrypoint.sh
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: diff_drive.xml  nav2_params.yaml  ros_gz_bridge_ackmann.yaml
robot_description/launch/: ackmann.launch.py  ackmann_harmonic.launch.py  ackmann_ign.launch.py  diffbot.launch.py  robot_bringup.launch.py  robot_description.py  rtabmap_slam.launch.py
robot_description/models/dockey/: model.sdf
robot_description/models/donkey/: model.sdf
robot_description/models/rc_ackmann/: model.conf  model.sdf
robot_description/rviz/: camera.rviz  ns_robot.rviz
robot_description/urdf/: diff_sensors.urdf  donkey_sensors.urdf
robot_description/urdf/realsense/: _l515.urdf.xacro
robot_description/worlds/: my.world  warehouse.sdf
